# bodorule

./: Cargo.toml  Dockerfile  docker-compose.yaml  makefile.toml
api/: Cargo.toml
api/src/: lib.rs
api/src/error/: mod.rs
api/src/handler/: boardgame.rs  health.rs  mod.rs
api/src/handler/board_game/: create_board_game.rs  mod.rs  show_board_game.rs  show_board_games.rs
api/src/route/: board_game.rs  boardgame.rs  health.rs  mod.rs
common/: Cargo.toml
common/src/: error.rs
domain/: Cargo.toml
domain/src/entity/: board_game.rs  boardgame.rs  mod.rs
domain/src/repository/: board_game.rs  boardgame.rs  health.rs
infra/: Cargo.toml
infra/migrations/: 20241005014356_start.down.sql  20241005014356_start.up.sql
infra/src/: lib.rs
infra/src/database/: config.rs  mod.rs
infra/src/orms/: boardgames.rs  mod.rs  prelude.rs
infra/src/orms/board_games/: conversion.rs  mod.rs
infra/src/orms/boardgames/: conversion.rs  mod.rs
infra/src/repository/: board_game.rs  boardgame.rs  health.rs
registry/: Cargo.toml
registry/src/: lib.rs
src/: main.rs
