[package]
edition = "2021"
name = "bodorule"
version = "0.1.0"

[[bin]]
name = "app"
path = "src/bin/main.rs"

[workspace]
members = ["api", "common", "domain", "infra", "registry"]

[workspace.dependencies]
api = {path = "./api"}
common = {path = "./common"}
domain = {path = "./domain"}
infra = {path = "./infra"}
registry = {path = "./registry"}
anyhow = "1.0.75"
async-trait = "0.1.74"
axum = {version = "0.7.5", features = ["macros"]}
shaku = {version = "0.6.2", features = ["derive"]}
sqlx = {version = "0.7.3", features = ["runtime-tokio", "uuid", "postgres", "chrono", "macros", "migrate"]}
serde = {version = "1", features = ["derive"]}
tokio = {version = "1.37.0", features = ["full"]}
uuid = {version = "1.10.0", features = ["v4"]}
url = "2"
rstest = "0.18.2"
sea-orm = { version = "1.0.1", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
thiserror = "1.0.64"

[dependencies]
api.workspace = true
common.workspace = true
domain.workspace = true
infra.workspace = true
registry.workspace = true
anyhow.workspace = true
axum.workspace = true
sqlx.workspace = true
tokio.workspace = true
shaku.workspace = true
sea-orm.workspace = true
